fix(api): equipment validation fix
